MVP
- Split the routes in multiple files
- Add a dashboard to manage the projects
- Fix the file edits
